--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body {
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.14;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--text-color);
   background-color: var(--white-color);
@@ -215,7 +215,7 @@ img {
   flex-basis: calc((100% - 120px) / 4);
 }
 .card-description {
-  padding-top: 30px;
+  padding: 30px 30px 15px 15px;
   text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -228,11 +228,19 @@ img {
   color: var(--title-color);
   margin-bottom: 10px;
 }
+.card-description p {
+  margin-bottom: 16px;
+}
+.social-item {
+  margin-right: 10px;
+}
+.social-item:last-child {
+  margin-right: 0;
+}
 .social-list {
   display: flex;
   align-items:center;
-  justify-content: space-between;
-  padding: 16px 32px 30px;
+  justify-content: center;
 }
 .social-list-link {
   display: flex;
@@ -316,7 +324,8 @@ background-color: var(--active-link);
   margin-bottom: 10px;
 }
 .footer-title {
-font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
 text-transform: uppercase;
 color: var(--white-color);
 margin-bottom: 10px;
