--- a/css/styles.css
+++ b/css/styles.css
@@ -215,8 +215,9 @@ img {
   flex-basis: calc((100% - 120px) / 4);
 }
 .card-description {
-  padding: 30px 30px 15px 15px;
+  padding: 30px 15px;
   text-align: center;
+  justify-content: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--white-color);
@@ -235,7 +236,7 @@ img {
   margin-right: 10px;
 }
 .social-item:last-child {
-  margin-right: 0;
+  margin: 0;
 }
 .social-list {
   display: flex;
